// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders correctly default 1`] = `
<Styled(View)>
  <Styled(Text)>
    <FormattedMessage
      id="label_id"
    />
  </Styled(Text)>
  <Styled(View)>
    <Styled(Component)
      actionWidth={22}
      isError={false}
      isFocused={true}
      onBlur={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder="{Translation id: placeholder_id}"
      value="value"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`InputField component renders correctly with action 1`] = `
<Styled(View)>
  <Styled(Text)>
    <FormattedMessage
      id="label_id"
    />
  </Styled(Text)>
  <Styled(View)>
    <Styled(Component)
      actionWidth={22}
      isError={false}
      isFocused={true}
      onBlur={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder="{Translation id: placeholder_id}"
      value="value"
    />
    <Styled(View)
      onLayout={[MockFunction]}
    >
      <Button
        disabled={false}
        isBorder={false}
        isLoading={false}
        isMarginBottom={false}
        isMarginRight={false}
        isOutline={false}
        isSmallHeight={true}
        isSmallWidth={true}
        onPress={[MockFunction]}
      >
        <FormattedMessage
          id="action_id"
        />
      </Button>
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`InputField component renders correctly with error 1`] = `
<Styled(View)>
  <Styled(Text)>
    <FormattedMessage
      id="label_id"
    />
  </Styled(Text)>
  <Styled(View)>
    <Styled(Component)
      isError={true}
      placeholder="{Translation id: placeholder_id}"
      value="value"
    />
    <Styled(View)>
      <Styled(View)>
        <Icon
          allowFontScaling={false}
          color="[mocked red500]"
          size={16}
        />
      </Styled(View)>
      <Styled(Text)>
        <FormattedMessage
          id="test_id"
        />
      </Styled(Text)>
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`InputField component renders without label 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(Component)
      actionWidth={22}
      isError={false}
      isFocused={true}
      onBlur={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder="{Translation id: placeholder_id}"
      value="value"
    />
  </Styled(View)>
</Styled(View)>
`;
